--- a/src/style/Appointment.css
+++ b/src/style/Appointment.css
@@ -1,10 +1,6 @@
 #appointment {
-	/* margin: 1rem auto; */
-	/* background-image: url("../images/time_vertical.jpg");
-	background-size: cover; */
-	color: white;
+	color: #fff;
 	position: relative;
-	/* max-height: 100vh; */
 }
 .appointment--background {
 	position: absolute;
@@ -15,21 +11,20 @@
 .appointment--background img {
 	width: 100%;
 	height: 100%;
+	-o-object-fit: cover;
 	object-fit: cover;
+	-o-object-position: 50% 35%;
 	object-position: 50% 35%;
 }
 #appointment p {
 	margin: 0.5rem 0;
 }
 .appointment__time,
-/* .appointment__location, */
 .appointment__price {
-	/* height: 100vh; */
 	position: relative;
 	margin: 2rem;
 }
 .appointment--opacity {
-	/* background-color: rgba(51, 51, 51, 0.8); */
 	background-color: rgba(4, 3, 3, 0.6);
 	padding: 2rem 0;
 }
@@ -52,12 +47,14 @@
 }
 @media (min-width: 768px) {
 	#appointment {
-		/* background-image: url("../images/time.jpg"); */
 		font-size: 1.5rem;
 	}
 	.time__details,
 	.price__details {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
+		-ms-flex-pack: distribute;
 		justify-content: space-around;
 	}
 	.time__details p {
