--- a/src/style/ContactForm.css
+++ b/src/style/ContactForm.css
@@ -13,7 +13,7 @@
 	font-weight: bold;
 }
 .contact__location iframe {
-	height: 20rem;
+	height: 23.1rem;
 	width: 100%;
 	border: none;
 }
@@ -27,22 +27,27 @@ textarea {
 }
 input::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
+	color: #767676;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 input::-moz-placeholder,
 textarea::-moz-placeholder {
+	color: #767676;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 input:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
+	color: #767676;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 input::-ms-input-placeholder,
 textarea::-ms-input-placeholder {
+	color: #767676;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 input::placeholder,
 textarea::placeholder {
+	color: #767676;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
 form .control {
@@ -86,6 +91,32 @@ form #send {
 #send {
 	cursor: pointer;
 }
+/*style des images*/
+.contact__img {
+	height: 5rem;
+	width: 5rem;
+	margin: 0.5rem;
+}
+/* .contact__img--container img {
+	height: 100%;
+} */
+/*fin stye images*/
+.flex__input {
+	display: flex;
+}
+.flex__input button {
+	background: lightgray;
+	color: #000;
+	border-radius: 0.2rem;
+	border: solid 1px;
+	font-size: 1.1rem;
+	padding: 0 0.3rem;
+}
+.flex__input input {
+	color: #767676;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	border: solid 1px #000;
+}
 @media (min-width: 425px) {
 	.contact__location p {
 		display: none;
@@ -101,17 +132,25 @@ form #send {
 }
 @media (min-width: 1024px) {
 	/*style temporaire*/
-	.contact__email p:nth-child(1) {
+	/* .contact__email p:nth-child(1) {
 		font-size: 1.5rem;
-	}
+	} */
 	/*fin style temporaire*/
 	#contact {
 		height: 100vh;
 	}
+	.contact__form {
+		position: absolute;
+		width: 100%;
+		top: 50%;
+		-webkit-transform: translateY(-50%);
+		-ms-transform: translateY(-50%);
+		transform: translateY(-50%);
+	}
 	.contact__flex {
-		/* display: -webkit-box;
+		display: -webkit-box;
 		display: -ms-flexbox;
-		display: flex; */
+		display: flex;
 		-webkit-box-orient: horizontal;
 		-webkit-box-direction: reverse;
 		-ms-flex-direction: row-reverse;
@@ -119,18 +158,18 @@ form #send {
 		-webkit-box-pack: center;
 		-ms-flex-pack: center;
 		justify-content: center;
-		position: absolute;
+		/* position: absolute;
 		width: 100%;
 		top: 50%;
 		-webkit-transform: translateY(-50%);
 		-ms-transform: translateY(-50%);
-		transform: translateY(-50%);
+		transform: translateY(-50%); */
 		margin: 0;
 	}
 	form,
 	.contact__location {
-		/*width: 40%;*/
-		width: 60%;
+		width: 40%;
+		/* width: 60%; */
 	}
 	.form__fullname {
 		display: -webkit-box;
@@ -145,10 +184,17 @@ form #send {
 		margin: initial;
 	}
 	.contact__location {
-		/*margin-left: 1rem;*/
-		margin: 1rem auto;
+		margin-left: 1rem;
+		/* margin: 1rem auto; */
 	}
 	form {
 		margin-right: 1rem;
+	}
+	.contact__img {
+		height: 7rem;
+		width: 7rem;
+	}
+	.contact__img--uploaded {
+		margin-top: 2rem;
 	}
 }
