--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -66,6 +66,9 @@ header nav a {
 	header nav a {
 		border-bottom: solid 1px #fff;
 	}
+	.header__section--svg {
+		display: none;
+	}
 }
 @media (min-width: 425px) {
 	header {
